--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,25 @@
 * {
   font-family: 'Roboto', sans-serif;
 }
+
+@keyframes marquee {
+  0% {
+    transform: translateX(-120%);
+  }
+
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+@media (min-width: 640px) {
+  @keyframes marquee {
+    0% {
+      transform: translateX(-50%);
+    }
+
+    100% {
+      transform: translateX(100%);
+    }
+  }
+}
